# eq1_pulse

./: .gitignore  .pre-commit-config.yaml  BUILDER_SUMMARY.md  NOTICE.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: common-setup-workflow.yml  mypy.yml  pyright.yml  ruff.yml  sphinx.yml  tests.yml
docs/: .gitignore  Makefile  README.md  builder_README.md  clean.sh  generate_html.sh  generate_pdf.sh  openapi_generator_README.md
docs/source/: .gitignore  _autoapi_ignore.py  _autodoc_type_aliases.py  _html_options.py  _intersphinx_options.py  _latex_options.py  _util.py  conf.py  index.rst
docs/source/_css/: furo-custom.css
docs/source/_static/: generate_all_diagrams.py  generate_barrier_diagram.py  generate_basic_usage_diagram.py  generate_decorator_comparison_diagram.py  generate_duration_rabi_diagram.py  generate_frequency_spectroscopy_diagram.py  generate_hahn_echo_diagram.py  generate_nested_schedule_diagram.py  generate_nested_sequence_diagram.py  generate_pulse_sequence_diagram.py  generate_rabi_diagram.py  generate_rabi_duration_diagram.py  generate_ramsey_detuning_diagram.py  generate_schedule_diagram.py  generate_schedule_refop_diagram.py  generate_t2star_ramsey_diagram.py
docs/source/_templates/autoapi/: class.rst  module.rst
docs/source/examples/: basic_usage.rst  index.rst  spin_qubit_rabi.rst  spin_qubit_t2star.rst
docs/source/user_guide/: builder_guide.rst  index.rst  introduction.rst
examples/: builder_example.py  discriminate_example.py  measure_if_example.py  multi_channel_wait_example.py  nested_decorator_example.py  pulse_shapes_example.py  spin_qubit_rabi.py  spin_qubit_t2star.py  sub_schedule_example.py  sub_sequence_example.py
output/: eq1_pulse_openapi.json  eq1_pulse_openapi.yaml
qa/: run_all_qa.sh
setup/conda_envs/: conda_env.yaml
setup/unix/: _test_conda_env.sh  create_dev_env.sh  install_eq1_pulse.sh  remove_dev_env.sh  update_dev_environment.sh
setup/win/: create_dev_env.ps1  install_eq1_pulse.ps1  remove_dev_env.ps1  update_dev_env.ps1
src/eq1_pulse/: __init__.py  builder.py
src/eq1_pulse/builder/: __init__.py  core.py  utils.py
src/eq1_pulse/models/: __init__.py  _arithmetic.py  _base_models.py  _identifier_str.py  _units.py  arithmetic.py  base_models.py  basic_types.py  channel_ops.py  complex.py  control_flow.py  data_ops.py  identifier_str.py  nd_array.py  pulse_types.py  reference_types.py  schedule.py  sequence.py  units.py
src/eq1_pulse/utilities/: __init__.py  openapi_generator.py  unique_name.py
src/eq1_pulse/visitor/: README.py  __init__.py  base.py  examples.py
tests/: test_openapi_generator.py
tests/eq1lab_pulse/: test_builder.py
tests/eq1lab_pulse/models/: test_basic_types.py  test_channel_ops.py  test_data_ops.py  test_nd_array.py  test_pulse_types.py  test_reference_types.py  test_schedule.py  test_sequence.py
tests/visitor/: __init__.py  test_examples.py  test_visitor_infrastructure.py
